OPENIDM-5622 git branch --set-upstream-to=<remote>/<branch> bugfix/OPENIDM-5622