@@ -11,8 +11,9 @@
  * Header, with the fields enclosed by brackets [] replaced by your own identifying
  * information: "Portions copyright [year] [name of copyright owner]".
  *
- * Copyright 2015 ForgeRock AS.
+ * Copyright 2015-2016 ForgeRock AS.
  */
+
 package org.forgerock.openidm.maintenance.upgrade;
 
 import org.osgi.framework.Bundle;
@@ -22,9 +23,10 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.nio.file.CopyOption;
+import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -86,9 +88,9 @@ public class BundleHandler {
      * @param bundle Location where the Bundle is installed.
      * @return Path to location where Bundle is located.
      */
-    private Path getBundlePath(Bundle bundle) throws UpdateException {
+    private Path getBundlePath(Bundle bundle) throws UpdateException, MalformedURLException {
         try {
-            return Paths.get(new URI(bundle.getLocation()).getPath());
+            return Paths.get(new URL(bundle.getLocation()).toURI());
         } catch (URISyntaxException e) {
             throw new UpdateException(e.getMessage(), e);
         }
